# fisc

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_INDEX.md  DOCUMENTATION_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  QUICKREF.md  README.md  USER_GUIDE.md  docs-build.sh  docs-deploy.sh  docs-serve.sh  endpoints.md  mkdocs.yml  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yml  release-please.yml  release.yml  test-install.yml  tests.yml
docs/: ARCHITECTURE.md  certificate-management.md  changelog.md  closing-day.md  contributing.md  error-reference.md  fiscal-counters.md  index.html  index.md  installation.md  receipt-types.md
docs/overrides/stylesheets/: extra.css
fiscguy/: __init__.py  admin.py  api.py  apps.py  exceptions.py  fields.py  fiscal_close_day.py  models.py  security.py  serializers.py  urls.py  views.py  zimra_base.py  zimra_crypto.py  zimra_receipt_handler.py
fiscguy/fiscguy/: admin.py  api.py
fiscguy/fiscguy/migrations/: 0002_device_device_model_number_and_more.py  0004_rename_device_model_number_device_device_model_name.py  0008_receipt_payment_terms.py  0009_receipt_submitted_alter_receipt_signature.py
fiscguy/fiscguy/services/: closing_day_service.py
fiscguy/fiscguy/tests/: test_api.py
fiscguy/management/commands/: README.md  init_device.py  ping_zimra.py
fiscguy/migrations/: 0001_initial.py  0002_remove_buyer_email_remove_buyer_phonenumber_and_more.py  0002_remove_receipt_payment_terms_receipt_payment_method.py  0003_buyer_email_buyer_phonenumber_buyer_trade_name.py  0003_device_production.py  0003_rename_payment_method_receipt_payment_terms.py  0004_alter_fiscalcounter_fiscal_counter_tax_id.py  0005_alter_device_device_id.py  0005_certs_csr.py  0006_alter_buyer_options_alter_certs_options_and_more.py  0006_receipt_zimra_inv_id.py  0007_alter_receiptline_quantity.py  0008_alter_receipt_total_amount_and_more.py  0009_configuration_fdms_metadata.py  0010_fiscalday_close_state_fields.py  0011_encrypt_certificate_keys.py  0012_taxes_device_scope.py  0013_receiptline_hs_code.py
fiscguy/services/: certs_service.py  closing_day_service.py  configuration_service.py  open_day_service.py  ping_service.py  receipt_service.py  status_service.py
fiscguy/tests/: __init__.py  conftest.py  test_api.py  test_closing_day_service.py  test_receipt_debit_note.py  test_receipt_sub_formats.py  test_security.py  test_services.py  test_views.py  test_zimra_base.py  test_zimra_crypto.py
fiscguy/utils/: cert_temp_manager.py  datetime_now.py
zimra/: manage.py
zimra/fiscguy/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py  zimra_base.py  zimra_crypto.py  zimra_receipt_handler.py
zimra/fiscguy/management/commands/: init_device.py
zimra/fiscguy/migrations/: 0001_initial.py  0007_alter_receiptline_tax_type.py  0010_alter_receipt_submitted.py  0011_receipt_credit_note_reason_and_more.py
zimra/fiscguy/services/: closing_day_service.py  receipt_service.py
zimra/fiscguy/utils/: cert_temp_manager.py  datetime_now.py
zimra/zimra/: asgi.py  settings.py  urls.py  wsgi.py
